objects/MHLK_CCT_KEY_VALUE_SETTING__c/MHLK_CCT_KEY_VALUE_SETTING__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MHLK_CCT_KEY_VALUE_SETTING</label>
</CustomObject>