objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/Advisor_Activity_ReportId__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Activity_ReportId__c</fullName>
    <label>Advisor Activity ReportId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>