objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/Advisor_Case_ReportId__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Case_ReportId__c</fullName>
    <label>Advisor  Case ReportId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>