objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/Advisor_Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Query_Limit__c</fullName>
    <label>Advisor_Query_Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>