objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/BancaCNCBIFromAddress__c.field-meta.xml
<CustomField>
    <fullName>BancaCNCBIFromAddress__c</fullName>
    <description>To store From email address</description>
    <label>BancaCNCBIFromAddress</label>
    <length>150</length>
    <type>Text</type>
</CustomField>