objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/BancaCNCBIToAddress__c.field-meta.xml
<CustomField>
    <fullName>BancaCNCBIToAddress__c</fullName>
    <description>To store to email address</description>
    <label>BancaCNCBIToAddress</label>
    <length>150</length>
    <type>Text</type>
</CustomField>