objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/BancaDBSCNCBISenderName__c.field-meta.xml
<CustomField>
    <fullName>BancaDBSCNCBISenderName__c</fullName>
    <label>BancaDBSCNCBISenderName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>