objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/BancaDBSFromAddress__c.field-meta.xml
<CustomField>
    <fullName>BancaDBSFromAddress__c</fullName>
    <description>To store from email address</description>
    <label>BancaDBSFromAddress</label>
    <length>150</length>
    <type>Text</type>
</CustomField>