objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/BancaDBSToAddress__c.field-meta.xml
<CustomField>
    <fullName>BancaDBSToAddress__c</fullName>
    <description>To store "To" email address for sending DBS report</description>
    <label>BancaDBSToAddress</label>
    <length>150</length>
    <type>Text</type>
</CustomField>