objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/Case_Creation_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Record_Types__c</fullName>
    <label>Case Creation Record Types</label>
    <type>TextArea</type>
</CustomField>