objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/Cont_Hole_Pack__c.field-meta.xml
<CustomField>
    <fullName>Cont_Hole_Pack__c</fullName>
    <description>PSI-4.32 |CTP- 254:-Generate feed to Genisys</description>
    <label>Cont_Hole_Pack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>