objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/Customer_Case_ReportId__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case_ReportId__c</fullName>
    <label>Customer Case ReportId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>