objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/LOB_Types__c.field-meta.xml
<CustomField>
    <fullName>LOB_Types__c</fullName>
    <label>LOB Types</label>
    <type>TextArea</type>
</CustomField>