objects/MHLK_CCT_KEY_VALUE_SETTING__c/fields/NIFI_Active__c.field-meta.xml
<CustomField>
    <fullName>NIFI_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Unchecked Batch Class Call From PAR Trigger is NOT Required.</description>
    <label>NIFI Active?</label>
    <type>Checkbox</type>
</CustomField>